# znake

./: .gitignore  CMakeLists.txt  README.md
shaders/: base.frag  base.vert  postprocess.frag  postprocess.vert
src/: main.cpp
web/: game.js  index.html  style.css
